WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195332
[ContentChangeObserver] Assert on if notify content change is allowed
https://bugs.webkit.org/show_bug.cgi?id=195332
Summary
[ContentChangeObserver] Assert on if notify content change is allowed
alan
Reported
2019-03-05 10:13:06 PST
Notify content change is only allowed when we are not inside mouseMoved anymore.
Attachments
Patch
(4.85 KB, patch)
2019-03-05 10:32 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.04 KB, patch)
2019-03-05 14:12 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-05 10:13:39 PST
<
rdar://problem/48603276
>
alan
Comment 2
2019-03-05 10:32:32 PST
Created
attachment 363651
[details]
Patch
alan
Comment 3
2019-03-05 14:12:43 PST
Created
attachment 363686
[details]
Patch
WebKit Commit Bot
Comment 4
2019-03-05 15:35:07 PST
Comment on
attachment 363686
[details]
Patch Clearing flags on attachment: 363686 Committed
r242516
: <
https://trac.webkit.org/changeset/242516
>
WebKit Commit Bot
Comment 5
2019-03-05 15:35:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug