[ContentChangeObserver] Assert on if notify content change is allowed https://bugs.webkit.org/show_bug.cgi?id=195332 <rdar://problem/48603276>

Reviewed by Simon Fraser.

Assert we don't notify the client about the state change while in handleSyntheticClick().

* page/ios/ContentChangeObserver.cpp:
(WebCore::ContentChangeObserver::domTimerExecuteDidStart):
(WebCore::ContentChangeObserver::domTimerExecuteDidFinish):
(WebCore::ContentChangeObserver::adjustObservedState):
* page/ios/ContentChangeObserver.h:
(WebCore::ContentChangeObserver::isObservingContentChanges const):
(WebCore::ContentChangeObserver::isNotifyContentChangeAllowed const):


Canonical link: https://commits.webkit.org/209683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242516 268f45cc-cd09-0410-ab3c-d52691b4dbfc